# Payment-Service/src/main/java/org/vijayCode/PaymentService/entity/Payment.java
@@ -1,0 +1,28 @@
+package org.vijayCode.PaymentService.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import javax.persistence.*;
+import java.time.LocalDate;
+
+@Data
+@Table(name="paymentInfo")
+@Entity
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class Payment {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "payment_seq")
+    @SequenceGenerator(name = "payment_seq", initialValue = 1000, sequenceName = "payment_seq_name")
+    private Integer id;
+
+    private String amount;
+    private LocalDate paymentDate;
+
+
+}
